adding cart and cart items

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=SleekSelects
+server.port=8181
 spring.datasource.url=jdbc:mysql://localhost:3306/sleek_selects_db
 spring.datasource.username=root
 spring.datasource.password=P@ssw0rd
