--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,7 @@ api.prefix=/api/v1
 ## limit the size of the image
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
+
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+logging.level.org.springdoc=DEBUG
